--- a/style/main.less
+++ b/style/main.less
@@ -469,6 +469,9 @@ label {
 				width: 100%;
 			}
 		}
+		.social {
+			text-align: right;
+		}
 	}
 }
 @media only screen and (max-width: 800px) {
