--- a/style/main.less
+++ b/style/main.less
@@ -263,10 +263,10 @@ justify-content: center;
 		border-left: solid 1px;
 		height: 30px;
 		cursor: pointer;
-
-		img {
-			margin-right: 5px;
+		:first-child {
+			margin-right: 10px;
 		}
+
 
 		.arrow {
 			width: 14px;
